--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,9 +55,9 @@
 <!-- Навігація: кнопка перемикання мови справа -->
 <div class="nav">
   {% if page.lang == "ua" %}
-    <a href="index_en.md">EN</a>
+    <a href="index_en.html">EN</a>
   {% elsif page.lang == "en" %}
-    <a href="index.md">🇺🇦</a>
+    <a href="index.html">🇺🇦</a>
   {% endif %}
 </div>
 
