--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
   {% if page.lang == "ua" %}
     <a href="index_en.html">EN</a>
   {% elsif page.lang == "en" %}
-    <a href="index.html">🇺🇦</a>
+    <a href="index.html">UA</a>
   {% endif %}
 </div>
 
